--- a/Visualisierung/VesDroid/AndroidManifest.xml
+++ b/Visualisierung/VesDroid/AndroidManifest.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.android.BluetoothChat"
-          android:versionCode="1"
-          android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="6" android:targetSdkVersion="6"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    package="de.gaffa.vescom.vesdroid"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/app_icon">
-        <activity android:name="de.gaffa.vescom.vesdroid.VesDroidActivity">
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="16" />
+
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
+        android:name="VesDroidApplication"
+        android:icon="@drawable/app_icon"
+        android:label="@string/app_name" >
+        <activity android:name=".VesDroidActivity" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DeviceListActivity"
-                  android:label="@string/select_device"
-                  android:theme="@android:style/Theme.Dialog"
-                  android:configChanges="orientation|keyboardHidden"/>
+        <activity
+            android:name="com.example.android.BluetoothChat.DeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Dialog" />
     </application>
+
 </manifest>
